<resources>
    <string name="app_name">BlaBlaWild</string>
    <string name="action_settings">Settings</string>
    <string name="search_itinerary">Search an itineraryData</string>
    <string name="search_main_activity">Search</string>
    <string name="departure_text">Departure</string>
    <string name="destination_text">Destination</string>
    <string name="date_text">Date</string>
    <string name="date_example_text">01/01/1970</string>
    <string name="search_upper_text">SEARCH</string>
    <string name="search_string_error">Please ! fill departure and destination !</string>
    <string name="search_date_error">Please ! fill date correctly !</string>
    <string name="date_time_1970">31/12/1970 03:30 PM</string>
    <string name="price_exemple">$19</string>
    <string name="frist_name">FristName</string>
    <string name="last_name">LastName</string>
    <string name="no_itinerary_found">Sorry !  we aren\'t found Itinerary !</string>
</resources>
